Refactor to Java 25  * JDK version bumped to 25  * EJB style bean naming convention avoided in favor of record style  * Builder pattern and fluent setter style are preferred over constructor based creation.